--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
       </div>
     </footer>
 
-    <script src="js/main.min.js"></script>
+    <script src="./app/js/main.min.js"></script>
 </body>
 
 </html>
